--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.14",
     "tailwindcss": "^4.1.14"
+  },
+   "scripts": {
+    "start" : "npx tailwindcss -i ./assets/css/main.css -o ./assets/css/output.css --watch"
   }
 }
